kube/3-remote-droid.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: remote-droid
  labels:
    app: remote-droid
spec:
  selector:
    matchLabels:
      app: remote-droid
  template:
    metadata:
      labels:
        app: remote-droid
    spec:
      tolerations:
        - key: node-role.kubernetes.io/master
          operator: Exists
          effect: NoSchedule
      containers:
        - name: remote-droid
          image: urielch/remote-droid:latest
          resources:
            limits:
              memory: 256Mi
              cpu: "0.2"
          ports:
            - containerPort: 3009
          securityContext:
            privileged: true
          volumeMounts:
            - mountPath: /dev/bus/usb
              name: usb
      terminationGracePeriodSeconds: 10
      volumes:
        - name: usb
          hostPath:
            path: /dev/bus/usb
