kube/2-redis-stack-prod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: redis-pod
  labels:
    app: redis
spec:
  volumes:
    - name: redis-data
      persistentVolumeClaim:
        claimName: redis-pvc
  containers:
    - name: redis
      image: redis/redis-stack-server
      resources:
        limits:
          memory: 256Mi
          cpu: "0.1"
      ports:
        - containerPort: 6379
        - containerPort: 8001
      volumeMounts:
        - name: redis-data
          mountPath: /data
---
apiVersion: v1
kind: Service
metadata:
  name: redis-service
spec:
  selector:
    app: redis
  ports:
    - name: redis-tcp
      protocol: TCP
      port: 6379
      targetPort: 6379
